09-middleware-strip-api.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: app-demo
spec:
  stripPrefix:
    prefixes:
      - /api
