06-deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: app-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: front-nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
