07-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: app-demo
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: app-demo
spec:
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: app-demo
spec:
  selector:
    app: front
  ports:
    - port: 80
      targetPort: 80
